name:                recline
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/recline#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable recline
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       reddit, 
                       aeson >= 0.9 && < 0.12,
                       api-builder >= 0.10 && < 0.13,    
                       bytestring == 0.10.*,    
                       data-default-class >= 0.0.1 && < 0.2,    
                       free >= 4 && < 5,    
                       http-client >= 0.4.30 && < 0.6,    
                       http-client-tls >= 0.2 && < 0.4,    
                       http-types >= 0.8 && < 0.10,    
                       network == 2.6.*,    
                       text == 1.*,    
                       time >= 1.5 && < 1.7,    
                       transformers >= 0.4 && < 0.6,    
                       unordered-containers >= 0.2.5 && < 0.3,    
                       vector >= 0.10 && < 0.12
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010                      
